2013-01-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* lib/PandoraFMS/PredictionServer.pm: Fixed prediction modules.
	
	Merged from trunk.

2013-01-08  Sancho Lerena <slerena@artica.es>

	*  lib/PandoraFMS/NetworkServer.pm: patch to solve problems with SNMP ports.
	_NOTE_ needs more testing!.

2013-01-02  Sancho Lerena <slerena@artica.es>

	Patch from Axel.

	* lib/PandoraFMS/Core.pm,
	lib/PandoraFMS/DataServer.pm: Now is possible to import Module Group from XML.

2012-12-19  Ramon Novoa  <rnovoa@artica.es>

	* DEBIAN/control,
	  DEBIAN/make_deb_package.sh,
	  conf/pandora_server.conf,
	  pandora_server.spec,
	  util/pandora_db.pl,
	  util/pandora_manage.pl: Updated version strings.

2012-12-27  Sancho Lerena <slerena@artica.es>

	* util/pandora_db.pl: Implemented deletion of old inventory
	data (using data delete interval).

2012-12-10  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Tools.pm: Decode output in all logfile output.

	* lib/PandoraFMS/Core.pm: Reformatted logentry for gis update.

	* lib/PandoraFMS/Config.pm: Updated version (4.0.3)

2012-11-30  Hirofumi Kosaka <kosaka@rworks.jp>

	* lib/PandoraFMS/SNMPServer.pm: Added missing safe_output()
	for trap filters. This fixed a bug that a backslash could not
	escape its following character.

2012-10-20  Sancho Lerena <slerena@artica.es>

	* pandora_database_check.pl: First attempt to create a tool
	to measure Pandora FMS performance in real time, for 
	monitoring performance of the database.
 
2012-10-23 Dario Rodriguez <dario.rodriguez@artica.es>

	* util/recon_scripts/snmpdevices.pl: Fixed an error in snmpdevices.pl
	which has a double safe_input.

2012-10-08  Sancho Lerena <slerena@artica.es>

	* util/mysql_plugin.sh: Fixed problem in composed variables.

2012-10-01  Sancho Lerena <slerena@artica.es>

	* util/pandora_manage.pl: Fixed enable eacl from CLI.
	It was calling wrong function.

2012-09-28  Ramon Novoa  <rnovoa@artica.es>
